Bug 996095.  All 32-bit integers are valid values for tabindex; don't restrict it to the int16_t range during parsing.  r=smaug